--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2"
   },
   "ampt": {
-    "app": "typescript-express-api"
+    "app": "typescript-express-api",
+    "org": "will834268"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
